samples/_failures_safe/1761542932_af5cc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8699db9d.c: In function ‘main’:
./samples/SAFE/__tmp_8699db9d.c:147:5: error: expected declaration or statement at end of input
  147 |     unsigned char temp_decomp[MAX_INPUT_SIZE];
      |     ^~~~~~~~
